Kubernetes-Application-Development/IngressAccess-TLS/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - ingress-basic.example
    secretName: aks-ingress-tls
  rules:
  - host: ingress-basic.example
    http:
      paths:
      - backend:
          serviceName: aks-helloworld-one
          servicePort: 5000
        path: /hello-world-one(/|$)(.*)
      - backend:
          serviceName: aks-helloworld-two
          servicePort: 5000
        path: /hello-world-two(/|$)(.*)
      - backend:
          serviceName: aks-helloworld-one
          servicePort: 5000
        path: /(.*)
